# jumpstart-microcontrollers

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  sitemap.xml
cmake/: arm-none-eabi-gcc.cmake
contributing/: index.html
docs/: contributing.md  index.md  license.md  resources.md  under_construction.md
docs/gdb/: gdb_commands.md
docs/introduction/: motivation.md  readme.md  start.md  work_in_progress.md
introduction/motivation/: index.html
introduction/readme/: index.html
introduction/start/: index.html
introduction/work_in_progress/: index.html
license/: index.html
openocd/: microbit.cfg  run_openocd.bat
projects/final_result/: CMakeLists.txt  env.bat  run_cmake.bat
projects/final_result/src/: TODO.md
projects/final_result/src/application/: delay.c  delay.h  display.c  display.h  main.c  register.h
projects/final_result/src/ld/: NRF51822_QFAA_R.ld
projects/final_result/src/microhal/: CMakeLists.txt  delay.h  gpio.h  register.h  timer.c  timer.h
projects/final_result/src/startup/: heap.c  isr_vectors.c  isr_vectors.h  linker_symbols.h  stack.c  startup.c  startup_config.h
resources/: index.html
search/: search_index.json
toolchain/toolchain_selection/: index.html
under_construction/: index.html
